; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_freebsd.c_nm_os_mitigation_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_freebsd.c_nm_os_mitigation_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nm_generic_mit = type { i32, %struct.netmap_adapter*, i64 }
%struct.netmap_adapter = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nm_os_mitigation_init(%struct.nm_generic_mit* %0, i32 %1, %struct.netmap_adapter* %2) #0 {
  %4 = alloca %struct.nm_generic_mit*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.netmap_adapter*, align 8
  store %struct.nm_generic_mit* %0, %struct.nm_generic_mit** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.netmap_adapter* %2, %struct.netmap_adapter** %6, align 8
  %7 = load %struct.nm_generic_mit*, %struct.nm_generic_mit** %4, align 8
  %8 = getelementptr inbounds %struct.nm_generic_mit, %struct.nm_generic_mit* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load %struct.nm_generic_mit*, %struct.nm_generic_mit** %4, align 8
  %11 = getelementptr inbounds %struct.nm_generic_mit, %struct.nm_generic_mit* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 8
  %12 = load %struct.netmap_adapter*, %struct.netmap_adapter** %6, align 8
  %13 = load %struct.nm_generic_mit*, %struct.nm_generic_mit** %4, align 8
  %14 = getelementptr inbounds %struct.nm_generic_mit, %struct.nm_generic_mit* %13, i32 0, i32 1
  store %struct.netmap_adapter* %12, %struct.netmap_adapter** %14, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
